tests/ui/type-alias-impl-trait/impl_trait_in_trait_defined_outside_trait2.stderr
error[E0308]: mismatched types
  --> $DIR/impl_trait_in_trait_defined_outside_trait2.rs:14:30
   |
LL |     type Assoc = impl std::fmt::Debug;
   |                  -------------------- the expected opaque type
LL |     type Foo = [(); {
LL |         let x: Self::Assoc = 42;
   |                -----------   ^^ expected opaque type, found integer
   |                |
   |                expected due to this
   |
   = note: expected opaque type `<() as Trait>::Assoc`
                     found type `{integer}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
